don't build xml catalogue files

--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -143,8 +143,8 @@ and the derived files
   \file{bookmark-example.tex}{\from{bookmark.dtx}{example}}%
   \nopreamble
   \nopostamble
-  \usedir{source/latex/oberdiek/catalogue}%
-  \file{bookmark.xml}{\from{bookmark.dtx}{catalogue}}%
+%  \usedir{source/latex/oberdiek/catalogue}%
+%  \file{bookmark.xml}{\from{bookmark.dtx}{catalogue}}%
 }
 
 \catcode32=13\relax% active space
