fix typo in doc
change \BookmarkDefaultDriver (in user doc) to \BookmarkDriverDefault (in sty code)

--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -307,9 +307,9 @@ and the derived files
 % and \hologo{VTeX} are automatically detected.
 % The default for the DVI drivers is \xoption{dvips}. This can
 % be changed in the configuration file \xfile{bookmark.cfg} by
-% \cs{BookmarkDefaultDriver}, e.g.:
+% \cs{BookmarkDriverDefault}, e.g.:
 % \begin{quote}
-% |\def\BookmarkDefaultDriver{dvipdfm}|
+% |\def\BookmarkDriverDefault{dvipdfm}|
 % \end{quote}
 %
 % \paragraph{Open bookmarks with dvipdfmx.} Since 2007-04-25 the
