--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -3079,7 +3079,7 @@ and the derived files
 % \subsection{Download}
 %
 % \paragraph{Package.} This package is available on
-% CTAN\footnote{\url{http://ctan.org/pkg/bookmark}}:
+% CTAN\footnote{\url{https://ctan.org/pkg/bookmark}}:
 % \begin{description}
 % \item[\CTAN{macros/latex/contrib/oberdiek/bookmark.dtx}] The source file.
 % \item[\CTAN{macros/latex/contrib/oberdiek/bookmark.pdf}] Documentation.
