markup \CTAN{... ctan archive path to package directory/} links as \CTANpkg using the /pkg URL as definition

--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -3268,13 +3268,13 @@ and the derived files
 %   Sebastian Rahtz, Heiko Oberdiek:
 %   \textit{The \xpackage{hyperref} package};
 %   2011/04/17 v6.82g;
-%   \CTAN{macros/latex/contrib/hyperref/}
+%   \CTANpkg{hyperref}
 %
 % \bibitem{currfile}
 %   Martin Scharrer:
 %   \textit{The \xpackage{currfile} package};
 %   2011/01/09 v0.4.
-%   \CTAN{macros/latex/contrib/currfile/}
+%   \CTANpkg{currfile}
 %
 % \end{thebibliography}
 %
