--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -204,8 +204,7 @@ and the derived files
 % \title{The \xpackage{bookmark} package}
 % \date{2019/06/04 v1.27}
 % \author{Heiko Oberdiek\thanks
-% {Please report any issues at \url{https://github.com/ho-tex/oberdiek/issues}}\\
-% \xemail{heiko.oberdiek at googlemail.com}}
+% {Please report any issues at \url{https://github.com/ho-tex/oberdiek/issues}}}
 %
 % \maketitle
 %
