--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -4,9 +4,9 @@
 % Version: 2019/06/04 v1.27
 % Info: PDF bookmarks
 %
-% Copyright (C) 2007-2011 by
-%    Heiko Oberdiek <heiko.oberdiek at googlemail.com>
-%    2016
+% Copyright (C)
+%    2007-2011 Heiko Oberdiek
+%    2016-2019 Oberdiek Package Support Group
 %    https://github.com/ho-tex/oberdiek/issues
 %
 % This work may be distributed and/or modified under the
@@ -103,8 +103,9 @@ This is a generated file.
 Project: bookmark
 Version: 2019/06/04 v1.27
 
-Copyright (C) 2007-2011 by
-   Heiko Oberdiek <heiko.oberdiek at googlemail.com>
+Copyright (C)
+   2007-2011 Heiko Oberdiek
+   2016-2019 Oberdiek Package Support Group
 
 This work may be distributed and/or modified under the
 conditions of the LaTeX Project Public License, either
