--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -1,12 +1,12 @@
 % \iffalse meta-comment
 %
 % File: bookmark.dtx
-% Version: 2020-02-26 v1.31
+% Version: 2019/12/03 v1.28
 % Info: PDF bookmarks
 %
 % Copyright (C)
 %    2007-2011 Heiko Oberdiek
-%    2016-2020 Oberdiek Package Support Group
+%    2016-2019 Oberdiek Package Support Group
 %    https://github.com/ho-tex/bookmark/issues
 %
 % This work may be distributed and/or modified under the
@@ -89,7 +89,7 @@
 \input docstrip.tex
 \Msg{************************************************************************}
 \Msg{* Installation}
-\Msg{* Package: bookmark 2020-02-26 v1.31 PDF bookmarks (HO)}
+\Msg{* Package: bookmark 2019/12/03 v1.28 PDF bookmarks (HO)}
 \Msg{************************************************************************}
 
 \keepsilent
@@ -101,11 +101,11 @@
 This is a generated file.
 
 Project: bookmark
-Version: 2020-02-26 v1.31
+Version: 2019/12/03 v1.28
 
 Copyright (C)
    2007-2011 Heiko Oberdiek
-   2016-2020 Oberdiek Package Support Group
+   2016-2019 Oberdiek Package Support Group
 
 This work may be distributed and/or modified under the
 conditions of the LaTeX Project Public License, either
@@ -175,7 +175,7 @@ and the derived files
 %<*driver>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bookmark.drv}%
-  [2020-02-26 v1.31 PDF bookmarks (HO)]%
+  [2019/12/03 v1.28 PDF bookmarks (HO)]%
 \documentclass{ltxdoc}
 \usepackage{holtxdoc}[2011/11/22]
 \begin{document}
@@ -189,7 +189,7 @@ and the derived files
 % \GetFileInfo{bookmark.drv}
 %
 % \title{The \xpackage{bookmark} package}
-% \date{2020-02-26 v1.31}
+% \date{2019/12/03 v1.28}
 % \author{Heiko Oberdiek\thanks
 % {Please report any issues at \url{https://github.com/ho-tex/bookmark/issues}}}
 %
@@ -752,7 +752,7 @@ and the derived files
 %<*package>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{bookmark}%
-  [2020-02-26 v1.31 PDF bookmarks (HO)]%
+  [2019/12/03 v1.28 PDF bookmarks (HO)]%
 %    \end{macrocode}
 %
 % \subsubsection{Requirements}
@@ -1867,7 +1867,7 @@ and the derived files
 %<*dvipdfm>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvipdfm.def}%
-  [2020-02-26 v1.31 bookmark driver for dvipdfm (HO)]%
+  [2019/12/03 v1.28 bookmark driver for dvipdfm (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@id}
@@ -2042,7 +2042,7 @@ and the derived files
 %<*vtex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-vtex.def}%
-  [2020-02-26 v1.31 bookmark driver for VTeX (HO)]%
+  [2019/12/03 v1.28 bookmark driver for VTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -2373,7 +2373,7 @@ and the derived files
 %<*pdftex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-pdftex.def}%
-  [2020-02-26 v1.31 bookmark driver for pdfTeX (HO)]%
+  [2019/12/03 v1.28 bookmark driver for pdfTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@DO@entry}
@@ -2529,7 +2529,7 @@ and the derived files
 %<*dvips>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvips.def}%
-  [2020-02-26 v1.31 bookmark driver for dvips (HO)]%
+  [2019/12/03 v1.28 bookmark driver for dvips (HO)]%
 %    \end{macrocode}
 %    \begin{macro}{\BKM@PSHeaderFile}
 %    \begin{macrocode}
@@ -2548,7 +2548,7 @@ and the derived files
 %<*dvipsone>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvipsone.def}%
-  [2020-02-26 v1.31 bookmark driver for dvipsone (HO)]%
+  [2019/12/03 v1.28 bookmark driver for dvipsone (HO)]%
 %    \end{macrocode}
 %    \begin{macro}{\BKM@PSHeaderFile}
 %    \begin{macrocode}
@@ -2567,7 +2567,7 @@ and the derived files
 %<*textures>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-textures.def}%
-  [2020-02-26 v1.31 bookmark driver for textures (HO)]%
+  [2019/12/03 v1.28 bookmark driver for textures (HO)]%
 %    \end{macrocode}
 %    \begin{macro}{\BKM@PSHeaderFile}
 %    \begin{macrocode}
@@ -3436,15 +3436,6 @@ and the derived files
 %     Documentation updates.
 %   \item adjust package loading (all required packages already loade
 %     by \xpackage{hyperref}).
-%   \end{Version}
-%   \begin{Version}{2020-02-26 v1.29}
-%   \item Updated
-%   \end{Version}
-%   \begin{Version}{2020-02-26 v1.30}
-%   \item Updated
-%   \end{Version}
-%   \begin{Version}{2020-02-26 v1.31}
-%   \item Updated
 %   \end{Version}
 % \end{History}
 %
